# paladocs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/examples/: golden_template.typ
crates/cli/src/: app.rs  cache.rs  cli.rs  diag.rs  error.rs  letterbox.rs  lib.rs  main.rs  mode.rs  nav.rs  pdf.rs  protocol.rs  restore.rs  terminal.rs
crates/cli/tests/: golden_template.rs  integration.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: cell.rs  lib.rs
crates/term/: Cargo.toml
crates/term/src/: backend.rs  base64.rs  cell_sink.rs  encode.rs  geometry.rs  ids.rs  lib.rs  medium.rs  presenter.rs
crates/term/tests/: wire.rs
crates/typst/: Cargo.toml
crates/typst/src/: compiled.rs  convert.rs  deck.rs  diag.rs  engine.rs  lib.rs  pdfpc.rs  project.rs  world.rs
crates/typst/tests/: m1_hermetic.rs  m2_touying.rs
crates/typst/tests/fixtures/: pdfpc_schema_snapshot.txt  touying_pause.typ
