[package]
name = "paladocs-typst"
version = "0.1.0"
description = "Typst compilation engine for Paladocs: compiles Typst sources into a logical Deck, renders pages to canonical RGBA frames, and exports PDF. Isolates all heavy external dependencies."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
paladocs-core = { path = "../core" }
paladocs-render = { path = "../render" }

# Typst compiler group — kept in lockstep at the same minor version (0.15).
typst = "=0.15.0"
typst-layout = "=0.15.0"
typst-render = "=0.15.0"
typst-pdf = "=0.15.0"
typst-kit = { version = "=0.15.0", default-features = false, features = [
    "embedded-fonts",
    "scan-fonts",
    "system-files",
    "universe-packages",
    "system-downloader",
] }
typst-assets = { version = "=0.15.0", features = ["fonts"] }
comemo = "0.4"
# Typst の警告診断（`Warned.warnings: EcoVec<SourceDiagnostic>`）を `CompiledDeck`
# にそのまま保持するため、コレクション型 `EcoVec` を名指しできるよう直接依存させる。
ecow = "0.2"
# テキストセルの占有幅（East Asian Width で Narrow / Wide を判定）。便利依存は
# typst クレートに隔離する規律に従い、ここだけで使う。
unicode-width = "0.2"
# 現在日付（`datetime.today()`）を World に供給する。ローカルタイムゾーンを
# マルチスレッドでも安全に解決できるため `time` ではなく chrono を使う。
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Must match the tiny-skia version used by typst-render 0.15 (0.12) so that the
# `Pixmap` type returned by `typst_render::render` unifies with ours.
tiny-skia = "0.12"

[features]
# Tests that require fetching the Touying package over the network (or a warm
# package cache). Off by default so `cargo test` stays hermetic.
touying-tests = []
